<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.linhdq.homework.RedActivity"
    android:gravity="center"
    >

    //me
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@mipmap/me"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="2"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/nameMe"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/schoolMe"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/birthMe"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/genderMe"
                android:layout_weight="1"
                />

        </LinearLayout>

    </LinearLayout>

    //tung
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@mipmap/tung"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="2"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/nameTung"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/schoolTung"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/birthTung"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/genderTung"
                android:layout_weight="1"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@mipmap/dau"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="2"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/nameDau"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/schoolDau"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/birthDau"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/genderDau"
                android:layout_weight="1"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
